# bulk-post

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  bulk_post.py  pyproject.toml  release-please-config.json  typicode-test-workflow.yaml  workflow-example.yaml
.claude/rules/: cli.md  commits.md  error-handling.md  testing-and-deps.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pr-title.yml  publish.yml  release-please.yml
bulk_post.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/superpowers/plans/: 2026-06-12-python-best-practices-alignment.md  2026-06-15-workflow-response-variables.md
docs/superpowers/specs/: 2026-06-12-python-best-practices-alignment-design.md  2026-06-15-workflow-response-variables-design.md
src/bulk_post/: __init__.py  __main__.py  auth.py  cli.py  csvio.py  http.py  runner.py  state.py  templating.py  terminal.py  variables.py  workflow.py  workflow_runner.py
tests/: test_bulk_post.py
