[project]
name = "bulk-post"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pyyaml"]

[project.scripts]
bulk-post = "bulk_post:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]  # long help/URL string literals are fine; the formatter governs code layout
