[project]
name = "bulk-post"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jsonpath-ng>=1.8.0",
    "pyyaml",
]

[project.scripts]
bulk-post = "bulk_post:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]  # long help/URL string literals are fine; the formatter governs code layout

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
# Pragmatic start: do NOT enable disallow_untyped_defs / strict yet.
# Tighten in a later pass once the package split lands.

[[tool.mypy.overrides]]
module = ["jsonpath_ng.*"]
ignore_missing_imports = true
